2011-04-06  Guillaume Lazzara  <z@lrde.epita.fr>

	Rename few routines.

	* scribo/estim/object_groups_v_thickness.hh,
	* scribo/filter/object_groups_v_thickness.hh: Rename as...

	* scribo/estim/object_groups_mean_width.hh,
	* scribo/filter/object_groups_mean_width.hh: ... this.

2011-04-06  Guillaume Lazzara  <z@lrde.epita.fr>

	Add more tests.

	* tests/filter/Makefile.am: Add new targets.

	* tests/filter/object_groups_mean_width.cc,
	* tests/filter/object_groups_size_ratio.cc,
	* tests/filter/object_groups_small.cc,
	* tests/filter/object_groups_with_holes.cc,
	* tests/filter/object_links_bbox_h_ratio.cc,
	* tests/filter/object_links_bbox_overlap.cc,
	* tests/filter/object_links_bbox_w_ratio.cc,
	* tests/filter/object_links_bottom_aligned.cc,
	* tests/filter/object_links_center_aligned.cc,
	* tests/filter/object_links_left_aligned.cc,
	* tests/filter/object_links_right_aligned.cc,
	* tests/filter/object_links_top_aligned.cc: New.

	* scribo/tests/img/the_valleys.pbm: New test data.

2011-04-06  Guillaume Lazzara  <z@lrde.epita.fr>

	Small fixes in Scribo.

	* scribo/core/component_features_data.hh: Fix default
	attributes initialization.

	* scribo/core/line_info.hh: Compute color and boldness if
	available in components data.

	* scribo/filter/object_links_left_aligned.hh,
	* scribo/filter/object_links_right_aligned.hh: Fix doc.

	* scribo/preprocessing/rotate_90.hh: Disable preconditions.

	* scribo/primitive/extract/alignments.hh: Avoid a warning.

	* src/preprocessing/split_bg_fg.cc: Initialize Magick++.

2011-04-06  Guillaume Lazzara  <z@lrde.epita.fr>

	Change test image format to pnm.

	* tests/img/alignment_1.png,
	* tests/img/alignment_2.png,
	* tests/img/alignment_3.png,
	* tests/img/alignment_4.png: Rename and convert as...

	* tests/img/alignment_1.pbm,
	* tests/img/alignment_2.pbm,
	* tests/img/alignment_3.pbm,
	* tests/img/alignment_4.pbm: ... this.

	* tests/primitive/extract/alignments.cc: Update loaded image.
